# gtest-cmake-example

./: .gitignore  CMakeLists.txt  Dockerfile  Gemfile  README.md  build.cmake  circle.yml  main.cpp  project1.cpp  project1.h  test_project1.cpp
spec/: container_spec.rb  spec_helper.rb
